--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "mongoose": "^8.10.0"
   }
 }
